<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_user">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/adduser"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-30dp"
            android:text="User Type"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="227dp"
            android:layout_height="38dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="20dp"
            android:popupBackground="@color/colorPrimaryDark"
            android:scrollbars="none"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/username_tview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/idnumber"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/firstname"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lastname"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18dp"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/address"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/button"
            android:layout_width="142dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradient"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/adduser"
            android:textColor="@color/colorSecondaryText"
            android:textFontWeight="100"
            android:textSize="20dp" />


    </LinearLayout>
</ScrollView>